--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -61,13 +61,25 @@ social_settings:
   linkedin_url: ''
 
 color_settings:
-  background_color: '#ffffff'
-  background_alt_color: '#f4f5f6'
+  # default color scheme
+  # background_color: '#ffffff'      -- White
+  # background_alt_color: '#f4f5f6'  -- ~Cultered
+  # text_dark_color: '#2A2F36'       -- ~Gunmetal
+  # text_medium_color: '#6C7A89'     -- ~Slate Gray
+  # text_light_color: '#ABB7B7'      -- ~Ash Gray
+  # accent_color: '#3498db'          -- ~Carolina Blue
+  # border_color: '#dddddd'          -- Gainsboro
+  # hero_background_color: '#132930' -- Gunmetal
+  # hero_text_color: '#ffffff'       -- White
+  # error_color: '#D64541'           -- ~CG Red
+
+  background_color: '#23282f'
+  background_alt_color: '#ffffff'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
   text_light_color: '#ABB7B7'
   accent_color: '#3498db'
-  border_color: '#dddddd'
+  border_color: '#23282f'
   hero_background_color: '#132930'
   hero_text_color: '#ffffff'
   error_color: '#D64541'
