--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -138,7 +138,8 @@ font_settings:
     medium_size: 30
     large_size: 35
     weight: 700
-    letter_spacing: -0.02
+    # letter_spacing: -0.02
+    letter_spacing: -0.00
   menu:
     small_size: 30
     medium_size: 15
@@ -150,21 +151,24 @@ font_settings:
     medium_size: 45
     large_size: 60
     weight: 700
-    letter_spacing: -0.03
+    # letter_spacing: -0.03
+    letter_spacing: -0.00
     line_height: 1.2
   h2:
     small_size: 22
     medium_size: 30
     large_size: 35
     weight: 700
-    letter_spacing: -0.02
+    # letter_spacing: -0.02
+    letter_spacing: -0.00
     line_height: 1.2
   h3:
     small_size: 22
     medium_size: 25
     large_size: 30
     weight: 600
-    letter_spacing: -0.02
+    # letter_spacing: -0.02
+    letter_spacing: -0.00
     line_height: 1.3
   h4:
     small_size: 17
@@ -199,7 +203,8 @@ font_settings:
     medium_size: 35
     large_size: 45
     weight: 300
-    letter_spacing: -0.02
+    # letter_spacing: -0.02
+    letter_spacing: -0.00
     line_height: 1.6
   buttons:
     weight: 600
