--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,10 +8,10 @@ header_settings:
 
 menu_settings:
   menu_items:
+    - title: 'Features'
+      url: '/'
     - title: 'Blog'
       url: '/blog/'
-    - title: 'Projects'
-      url: '/'
     - title: 'About'
       url: '/about'
     - title: 'Contact'
