--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,7 @@ basic_settings:
   favicon_image: /images/scottnorton-io-favicon.ico
 
 header_settings:
-  logo_image: 
+  logo_image: /images/Scott Norton-Logo-3.png
   logo_width: 200
 
 menu_settings:
