--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,12 +10,12 @@ menu_settings:
   menu_items:
     - title: 'Features'
       url: '/'
-    - title: 'Blog'
+    - title: 'Locus Communis'
       url: '/blog/'
-    - title: 'About'
-      url: '/about'
-    - title: 'Contact'
-      url: '/contact'
+#    - title: 'About'
+#      url: '/about'
+#    - title: 'Contact'
+#      url: '/contact'
 
 footer_settings:
   footer_tagline: Where POWER meets TRUST.
@@ -26,11 +26,11 @@ hero_settings:
 post_settings:
   grid_spacing: 10
 
-contact_settings:
-  form_action: 'https://formspree.io/f/myylygyn'
-  confirmation_url: '/thanks'
-  email_subject: 'Contact form submission'
-  send_button_text: 'Send Message'
+#contact_settings:
+#  form_action: 'https://formspree.io/f/myylygyn'
+#  confirmation_url: '/thanks'
+#  email_subject: 'Contact form submission'
+#  send_button_text: 'Send Message'
 
 social_settings:
   facebook_url: ''
