--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,6 +10,8 @@ menu_settings:
   menu_items:
     - title: 'Articles'
       url: '/'
+    - title: 'Templates'
+      url: '/templates/'
     - title: 'Locus Communis'
       url: '/locus-communis/'
 #    - title: 'About'
